--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,3 +1,4 @@
+
 <article class="post">
   <div class="title">
     <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
@@ -9,7 +10,7 @@
     |
     <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
   </div>
-</article>
+</article>End of code snippet
 
 {{#if loggedIn}}
 <form class="comment-form">
