--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,13 @@
       <a href="/">Just Tech News</a>
     </h1>
     <nav>
-      <button id="logout" class="btn-no-style">logout</button>
-      <a href="/login">login</a>
-    </nav>
-  </header>
+      {{#if loggedIn}}
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
     <main>
       {{{ body }}}
     </main>
@@ -26,7 +29,10 @@
       Thanks for visiting!
     </footer>
   </div>
- <script src="/javascript/logout.js"></script>
+  
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
